syntax = "proto3";

package rs.duet.log;

import "google/protobuf/timestamp.proto";
import "common.proto";

message Log {
    // Span id.
    optional uint64 span_id = 1;
    // Describes the level of verbosity of a log.
    common.Level level = 2;
    // Timestamp.
    google.protobuf.Timestamp time = 5;
    // Key-value fileds.
    map<string, common.Value> fields = 7;
}